--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@
 apply plugin: 'groovy'
 
 sourceCompatibility = '1.8'
-def moquiDir = file(projectDir.absolutePath + '/../../..')
+targetCompatibility = '1.8'
+def moquiDir = projectDir.parentFile.parentFile.parentFile
 def frameworkDir = file(moquiDir.absolutePath + '/framework')
 def componentNode = parseComponent(project)
 version = componentNode.'@version'
@@ -23,6 +24,7 @@ version = componentNode.'@version'
 // maybe in the future: repositories { mavenCentral() }
 repositories {
     flatDir name: 'localLib', dirs: frameworkDir.absolutePath + '/lib'
+    flatDir name: 'librepo', dirs: projectDir.absolutePath + '/librepo'
     jcenter()
 }
 
@@ -32,8 +34,11 @@ tasks.withType(GroovyCompile) { options.compilerArgs << "-proc:none" }
 
 dependencies {
     compile project(':framework')
-    testCompile project(':framework').configurations.testCompile.allDependencies
+    // FIXME: license?
+    compile 'org.keycloak:keycloak-servlet-filter-adapter:5.0.0'
 }
+
+task cleanLib(type: Delete) { delete fileTree(dir: projectDir.absolutePath+'/lib', include: '*') }
 
 // by default the Java plugin runs test on build, change to not do that (only run test if explicit task)
 // no longer workds as of gradle 4.8 or possibly earlier, use clear() instead: check.dependsOn.remove(test)
@@ -44,19 +49,9 @@ jar {
     baseName = componentNode.'@name'
 }
 
-test {
-    dependsOn cleanTest
-    include '**/MantleUslSuite.class'
-    systemProperty 'moqui.runtime', moquiDir.absolutePath + '/runtime'
-    systemProperty 'moqui.conf', 'conf/MoquiDevConf.xml'
-    systemProperty 'moqui.init.static', 'true'
-
-    // show standard out and standard error of the test JVM(s) on the console
-    testLogging.showStandardStreams = true; testLogging.showExceptions = true
-
-    classpath += files(sourceSets.main.output.classesDirs)
-    // filter out classpath entries that don't exist (gradle adds a bunch of these), or ElasticSearch JarHell will blow up
-    classpath = classpath.filter { it.exists() }
-
-    beforeTest { descriptor -> logger.lifecycle("Running test: ${descriptor}") }
-}
+task copyDependencies { doLast {
+    copy { from (configurations.runtime - project(':framework').configurations.runtime - project(':framework').jar.archivePath)
+        into file(projectDir.absolutePath + '/lib') }
+} }
+copyDependencies.dependsOn cleanLib
+jar.dependsOn copyDependencies
